<resources>
    <string name="app_name">SimpleMeteoGPS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_location">Your Location :</string>
    <string name="cityLocation">CityLocation</string>
    <string name="countrylocation">countryLocation</string>
    <string name="todayfragment">TodayFragment</string>
    <string name="temp_zero">Temp Zero</string>
    <string name="temp_one">temp_one</string>
    <string name="temp_two">temp_two</string>
    <string name="temp_three">temp_three</string>
    <string name="temp_four">temp_four</string>
    <string name="temp_five">temp_five</string>
    <string name="temp_six">temp_six</string>
    <string name="temp_seven">temp_seven</string>
    <string name="wind_seven">wind_seven</string>
    <string name="wind_six">wind_six</string>
    <string name="wind_five">wind_five</string>
    <string name="wind_four">wind_four</string>
    <string name="wind_three">wind_three</string>
    <string name="wind_two">wind_two</string>
    <string name="wind_one">wind_one</string>
    <string name="wind_zero">wind_zero</string>
    <string name="date_seven">date_seven</string>
    <string name="date_six">date_six</string>
    <string name="date_five">date_five</string>
    <string name="date_four">date_four</string>
    <string name="date_three">date_three</string>
    <string name="date_two">date_two</string>
    <string name="date_one">date_one</string>
    <string name="date_zero">date_zero</string>
    <string name="icon_seven">icon_Seven</string>
    <string name="icon_six">icon_six</string>
    <string name="icon_five">icon_five</string>
    <string name="icon_four">icon_four</string>
    <string name="icon_three">icon_three</string>
    <string name="icon_two">icon_two</string>
    <string name="icon_one">icon_one</string>
    <string name="icon_zero">icon_zero</string>
    <string name="indexseven">indexSeven</string>
    <string name="indexsix">indexSix</string>
    <string name="indexfive">indexFive</string>
    <string name="indexFour">indexFour</string>
    <string name="indexthree">indexThree</string>
    <string name="indextwo">indexTwo</string>
    <string name="indexone">indexOne</string>
    <string name="indexzero">indexZero</string>
    <string name="tomorrowfragment">TomorrowFragment</string>
</resources>
