<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.TodayFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayfragment" />

<!--    <androidx.appcompat.widget.LinearLayoutCompat-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerView_fragmentToday"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"/>-->


<!--    </androidx.appcompat.widget.LinearLayoutCompat>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/linearLayoutIconWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/icon_weather_zero"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

        <ImageView
            android:id="@+id/icon_weather_one"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher"
            />

            <ImageView
                android:id="@+id/icon_weather_two"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:id="@+id/icon_weather_three"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:id="@+id/icon_weather_four"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:id="@+id/icon_weather_five"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:id="@+id/icon_weather_six"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:id="@+id/icon_weather_seven"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher"
                >

        </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:id="@+id/indexLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/indexForZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexzero" />

                <TextView
                    android:id="@+id/indexForOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexone" />

                <TextView
                    android:id="@+id/indexForTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indextwo" />

                <TextView
                    android:id="@+id/indexForThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexthree" />

                <TextView
                    android:id="@+id/indexForFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexFour" />

                <TextView
                    android:id="@+id/indexForFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexfive" />

                <TextView
                    android:id="@+id/indexForSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexsix" />

                <TextView
                    android:id="@+id/indexForSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indexseven" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/tempLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tempZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_zero" />

            <TextView
                android:id="@+id/tempOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_one" />

            <TextView
                android:id="@+id/tempTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_two" />

            <TextView
                android:id="@+id/tempThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_three" />

            <TextView
                android:id="@+id/tempFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_four" />

            <TextView
                android:id="@+id/tempFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_five" />

            <TextView
                android:id="@+id/tempSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_six" />

            <TextView
                android:id="@+id/tempSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_seven" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/windLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/windZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_zero" />

            <TextView
                android:id="@+id/windOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_one" />

            <TextView
                android:id="@+id/windTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_two" />

            <TextView
                android:id="@+id/windThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_three" />

            <TextView
                android:id="@+id/windFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_four" />

            <TextView
                android:id="@+id/windFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_five" />

            <TextView
                android:id="@+id/windSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_six" />

            <TextView
                android:id="@+id/windSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_seven" />

        </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/dateZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_zero" />

                <TextView
                    android:id="@+id/dateOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_one" />

                <TextView
                    android:id="@+id/dateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_two" />

                <TextView
                    android:id="@+id/dateThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_three" />

                <TextView
                    android:id="@+id/dateFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_four" />

                <TextView
                    android:id="@+id/dateFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_five" />

                <TextView
                    android:id="@+id/dateSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_six" />

                <TextView
                    android:id="@+id/dateSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_seven" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iconLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/iconZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_zero" />

                <TextView
                    android:id="@+id/iconOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_one" />

                <TextView
                    android:id="@+id/iconTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_two" />

                <TextView
                    android:id="@+id/iconThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_three" />

                <TextView
                    android:id="@+id/iconFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_four" />

                <TextView
                    android:id="@+id/iconFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_five" />

                <TextView
                    android:id="@+id/iconSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_six" />

                <TextView
                    android:id="@+id/iconSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_seven" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>