<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/yourLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cityLocation"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        />

    <TextView
        android:id="@+id/cityLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityLocation"
        app:layout_constraintLeft_toRightOf="@id/yourLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/countryLocation"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

         />

    <TextView
        android:id="@+id/countryLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countrylocation"
        app:layout_constraintLeft_toRightOf="@id/cityLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>